# FactorLens

./: README.md  app.py  factor_engine.py  pdf_parser.py  pyproject.toml  requirements.txt  streamlit_app.py
templates/: base.html  index.html  results.html
