[project]
name = "portfolio-reconstruct"
version = "0.1.0"
description = "Factor-based portfolio replication of public funds — based on AQR's Superstar Investors paper"
readme = "README.md"
requires-python = ">=3.14"

[project.scripts]
start = "app:app"
dependencies = [
    "flask>=3.1.3",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pdfplumber>=0.11.9",
    "plotly>=6.5.2",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "yfinance>=1.2.0",
]
